# NashMind

./: .gitignore  COMPREHENSIVE_DIAGNOSIS_REPORT.md  FAILURE_ANALYSIS_REPORT.md  FINAL_DEVELOPMENT_REPORT.md  INTEGRATION_REPORT.md  README.md  ULTRA_ADVANCED_README.md  __expanded_eval.py  __quick_eval.py  __run_eval_50.py  activate_all_systems.py  adaptive_meta_learning.py  advanced_pattern_detector.py  advanced_pattern_engine.py  advanced_simulation_engine.py  advanced_simulation_engine_backup.py  advanced_training_loop.py  analyze_training_patterns.py  arc_adaptive_hybrid_system.py  arc_clean_integrated_system.py  arc_complete_agent_part1.py  arc_complete_agent_part2.py  arc_complete_agent_part3.py  arc_complete_agent_part4.py  arc_complete_agent_part5.py  arc_complete_agent_part6.py  arc_core_redesign.py  arc_deep_analysis_report.json  arc_hierarchical_reasoning.py  arc_interactive_system.py  arc_learning_solver.py  arc_memory_bank.pkl  arc_object_centric_reasoning.py  arc_pattern_analyzer.py  arc_prize_2025_main.py  arc_results_analyzer.py  arc_revolutionary_system.py  arc_revolutionary_system_backup.py  arc_simple_test.py  arc_solver_test.py  (+194 more)
Burhan/Burhan/: .gitignore  .replit  arc_solver_main.py  main.py  pyproject.toml  replit.md  test_arc_system.py
Burhan/Burhan/src/: __init__.py  arc_agent.py
Burhan/Burhan/src/arc/: __init__.py  grid_operations.py  pattern_detector.py  task_loader.py  transformation_rules.py
Burhan/Burhan/src/csp/: __init__.py  arc_consistency.py  constraints.py  core.py  (+1 more)
Burhan/Burhan/tests/: test_arc_operations.py  test_solvers.py
(+37 files in other folders)
