[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "ortools>=9.14.6206",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
]
